--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="card-body text-center">
               <h5 class="card-title">DENIMS</h5>
 
-              <a href="#" class="btn btn-warning">Shop Now</a>
+              <a href="#" class="btn btn-warning"onclick="alert('Not Available')">Shop Now</a>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
             <div class="card-body text-center">
               <h5 class="card-title">SHORTS</h5>
 
-              <a href="#" class="btn btn-warning">Shop Now</a>
+              <a href="#" class="btn btn-warning" onclick="alert('Not Available')">Shop Now</a>
             </div>
           </div>
         </div>
@@ -115,7 +115,7 @@
             <div class="card-body text-center">
               <h5 class="card-title">SHIRTS</h5>
 
-              <a href="#" class="btn btn-warning">Shop Now</a>
+              <a href="#" class="btn btn-warning"onclick="alert('Not Available')">Shop Now</a>
             </div>
           </div>
         </div>
