--- a/form.html
+++ b/form.html
@@ -5,64 +5,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkout Form</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="form.css">
 
 </head>
 
 <body>
-
   <a href="index.html"><button type="button" class="btn btn-warning sticky-top"><i class='bx bx-arrow-back'></i>
       Home</button></a>
-
-  <div class="container form-container">
-    <h2 class="mb-4">Checkout Form</h2>
-
-    <!-- Order Summary Section -->
-    <div id="order-summary" class="mt-4">
-      <h3>Order Summary</h3>
-      <ul id="summary-items" class="list-group"></ul>
-      <h4 id="summary-total"></h4>
+  <form id="checkout-form">
+    <h1>Checkout Form</h1>
+    <div class="success-message" id="success-message">Your order has been placed successfully!</div>
+    <div class="form-group">
+      <input type="hidden" name="access_key" value="29939c36-6d93-4e1c-86a7-fe3bc4d3fd21">
+      <input type="text" name="name" placeholder="Enter Your Name" required>
+      <input type="email" name="email" placeholder="Enter Your Email" required>
+      <input type="text" name="contact-number" placeholder="Enter Your Telephone Number" required>
+      <input type="text" class="add" name="address" placeholder="Enter Your Address" required>
     </div>
 
-    <form id="checkoutForm">
-      <!-- Name Field -->
-      <div class="mb-3">
-        <label for="name" class="form-label">Name</label>
-        <input type="text" class="form-control" id="name" placeholder="Enter your full name" required>
-        <div class="invalid-feedback">Please enter your name.</div>
-      </div>
+    <!-- Order Summary Section -->
+    <div id="order-summary">
+      <h2>Order Summary</h2>
+      <ul id="order-items"></ul>
+      <h4 id="order-total">Total Amount: Rs.0</h4>
+    </div>
 
-      <!-- Email Field -->
-      <div class="mb-3">
-        <label for="email" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
-        <div class="invalid-feedback">Please enter a valid email address.</div>
-      </div>
+    <button class="sub-btn" type="submit">Place Order</button>
 
-      <!-- Telephone Number Field -->
-      <div class="mb-3">
-        <label for="telephone" class="form-label">Telephone Number</label>
-        <input type="tel" class="form-control" id="telephone" placeholder="Enter your telephone number" required>
-        <div class="invalid-feedback">Please enter a valid telephone number.</div>
-      </div>
-
-      <!-- Address Field -->
-      <div class="mb-3">
-        <label for="address" class="form-label">Address</label>
-        <textarea class="form-control" id="address" rows="3" placeholder="Enter your address" required></textarea>
-        <div class="invalid-feedback">Please enter your address.</div>
-      </div>
-
-      <!-- Submit Button -->
-      <button type="submit" class="btn btn-primary">Place Order</button>
-    </form>
-  </div>
-
-
+  </form>
 
   <script src="form.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
+    
