--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
       <a href="https://www.instagram.com/engage.p_rainge/?utm_source=ig_web_button_share_sheet" target="_blank">
         <li><i class='bx bxl-instagram'></i> P_Rainge</li>
       </a>
+       <a href="https://www.tiktok.com/@engage.p_rainge?_t=8qrlq2PA9UV&_r=1" target="_blank">
+        <li><i class='bx bxl-tiktok'></i></i> P_Rainge</li>
+      </a>
       <li><i class='bx bxl-facebook-circle'></i> P_Rainge</li>
     </ul>
   </section>
