--- a/t-shirt.html
+++ b/t-shirt.html
@@ -8,6 +8,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="t-shirt-style.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+ <link rel="icon" href="img2/t shirt upper logo.jpg">
   <title>T-Shirts</title>
 </head>
 
