--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="icon" href="img/cart.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="cart.css">
 </head>
@@ -15,6 +16,8 @@
 <body>
   <a href="t-shirt.html"><button type="button" class="btn btn-warning sticky-top"><i class='bx bx-arrow-back'></i>
       Back</button></a>
+
+  <img src="img/logo.jpg" class="top-img" alt="">
 
   <div class="container mt-5">
     <h2>Your Cart</h2>
