--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@
 <body>
   <a href="index.html"><button type="button" class="btn btn-warning sticky-top"><i class='bx bx-arrow-back'></i>
       Home</button></a>
-  <form id="checkout-form">
+  <form id="checkout-form" action="https://api.web3forms.com/submit" method="POST">
     <h1>Checkout Form</h1>
     <img src="img/logo.jpg " class="top-img" alt="">
     <div class="success-message" id="success-message">Your order has been placed successfully!</div>
